Added DB migration script, fixed dorm search, fixed jobs
