# services/admin/router.go
@@ -11,5 +11,7 @@ func SetupRouter(r gin.IRouter, db *gorm.DB, cfg *config.Config) {
 	r.POST("/catalog-update", c.CatalogUpdate)
 	r.POST("/update-all-users-from-ldap", c.UpdateAllUsersFromLDAP)
 	r.POST("/update-all-factrak-survey-deficits", c.UpdateAllFactrakSurveyDeficits)
+	r.POST("/dorms-update", c.DormsUpdate)
+
 	r.GET("/jobs/:jobID/status", c.GetJobStatus)
 }
